Add trending statuses

--- a/app/javascript/styles/mastodon/accounts.scss
+++ b/app/javascript/styles/mastodon/accounts.scss
@@ -331,12 +331,18 @@
 }
 
 .batch-table__row--muted .pending-account__header,
-.batch-table__row--muted .accounts-table {
+.batch-table__row--muted .accounts-table,
+.batch-table__row--muted .status__content,
+.batch-table__row--muted .name-tag {
   &,
   a,
   strong {
     color: lighten($ui-base-color, 26%);
   }
+}
+
+.batch-table__row--muted .name-tag .avatar {
+  opacity: 0.5;
 }
 
 .batch-table__row--muted .accounts-table {
@@ -352,7 +358,9 @@
 }
 
 .batch-table__row--attention .pending-account__header,
-.batch-table__row--attention .accounts-table {
+.batch-table__row--attention .accounts-table,
+.batch-table__row--attention .status__content,
+.batch-table__row--attention .name-tag {
   &,
   a,
   strong {
